# dockbiotic

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
data/chemdiv/: prepare_chemdiv_dataset.py
data/coadd/: COADD_LICENSE.md  prepare_coadd_dataset.py
data/dockstring/: prepare_dockstring_dataset.py
data/excape/: download_excape.sh  prepare_excape_dataset.py
data/rdkit/: prepare_rdkit_dataset.py
data/stokes/: prepare_stokes_dataset.py
dockbiotic/: constants.py  losses.py  metrics.py  models.py
dockbiotic/data/: create.py  dataframes.py  directories.py  disk.py  helpers.py  num_tasks.py
dockbiotic/utils/: chemistry.py  evaluation.py  modeling.py  save_load.py  scripting.py
dockbiotic/utils/similarities/: computation.py  dataframes.py  visualization.py
example_experiments/1_prepare_datasets/: script.sh
example_experiments/2_compute_similarities/: script.py  script.sh
example_experiments/3_save_datasets_to_disk/: script.py  script.sh
example_experiments/4_pretrain_on_dockstring/: script.py  script.sh
example_experiments/5_finetune_on_stokes/: script.py  script.sh
example_experiments/6_evaluate_on_coadd/: script.py  script.sh
example_experiments/7_predict_chemdiv_sample/: script.py  script.sh
